--- a/src/main/resources/static/Member_Collect.html
+++ b/src/main/resources/static/Member_Collect.html
@@ -103,7 +103,8 @@
         </span>
             <!--End 所在收货地区 End-->
             <span class="fr">
-        	<span class="fl">你好，请<a href="Login.html">登录</a>&nbsp; <a href="Regist.html" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
+        	<span class="fl">你好，{{$data.user.username ?  $data.user.username : '请登录'}}&nbsp;<a v-if="!$data.user.username" href="Login.html">登录</a>&nbsp;&nbsp;<a v-if="$data.user.username" href="javascript:void(0)" @click="logout()">注销</a>&nbsp;&nbsp; <a href="register.html" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a
+                    href="#">我的订单</a>&nbsp;|</span>
         	<span class="ss">
             	<div class="ss_list">
                 	<a href="#">收藏夹</a>
@@ -152,39 +153,22 @@
     <div class="m_top_bg">
         <div class="top">
             <div class="m_logo"><a href="Index.html"><img src="images/logo1.png" /></a></div>
-            <div class="m_search">
-                <form>
-                    <input type="text" value="" class="m_ipt" />
-                    <input type="submit" value="搜索" class="m_btn" />
-                </form>
-                <span class="fl"><a href="#">咖啡</a><a href="#">iphone 6S</a><a href="#">新鲜美食</a><a href="#">蛋糕</a><a href="#">日用品</a><a href="#">连衣裙</a></span>
-            </div>
             <div class="i_car">
-                <div class="car_t">购物车 [ <span>3</span> ]</div>
+                <div class="car_t">购物车 [ <span>{{productLength}}</span> ]</div>
                 <div class="car_bg">
                     <!--Begin 购物车未登录 Begin-->
-                    <div class="un_login">还未登录！<a href="Login.html" style="color:#ff4e00;">马上登录</a> 查看购物车！</div>
-                    <!--End 购物车未登录 End-->
-                    <!--Begin 购物车已登录 Begin-->
-                    <ul class="cars">
-                        <li>
-                            <div class="img"><a href="#"><img src="images/car1.jpg" width="58" height="58" /></a></div>
-                            <div class="name"><a href="#">法颂浪漫梦境50ML 香水女士持久清新淡香 送2ML小样3只</a></div>
-                            <div class="price"><font color="#ff4e00">￥399</font> X1</div>
+                    <ul v-if="$data.user.username" class="cars">
+                        <li v-for="(item, index) in products" :key="index" >
+                            <div class="img"><a href="#"><img height="58" :src="'http://localhost:8080/getImage?filePath=' + item.filePath" width="58"/></a></div>
+                            <div class="name"><a href="#">{{item.name}}</a></div>
+                            <div class="price"><font color="#ff4e00">￥{{item.price}}</font> X{{item.count}}</div>
                         </li>
-                        <li>
-                            <div class="img"><a href="#"><img src="images/car2.jpg" width="58" height="58" /></a></div>
-                            <div class="name"><a href="#">香奈儿（Chanel）邂逅活力淡香水50ml</a></div>
-                            <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                        </li>
-                        <li>
-                            <div class="img"><a href="#"><img src="images/car2.jpg" width="58" height="58" /></a></div>
-                            <div class="name"><a href="#">香奈儿（Chanel）邂逅活力淡香水50ml</a></div>
-                            <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                        </li>
+                        <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>{{totalPrice}}</span></div>
+                        <div class="price_a"><a href="BuyCar.html">去购物车结算</a></div>
                     </ul>
-                    <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>1058</span></div>
-                    <div class="price_a"><a href="#">去购物车结算</a></div>
+                    <div v-else class="un_login">
+                        还未登录！<a href="Login.html" style="color:#ff4e00;">马上登录</a> 查看购物车！
+                    </div>
                     <!--End 购物车已登录 End-->
                 </div>
             </div>
@@ -198,38 +182,32 @@
                 <div class="left_n">管理中心</div>
                 <div class="left_m">
                     <div class="left_m_t t_bg1">订单中心</div>
+
                     <ul>
-                        <li><a href="Member_Order.html">我的订单</a></li>
-                        <li><a href="Member_Address.html">收货地址</a></li>
-                        <li><a href="#">缺货登记</a></li>
-                        <li><a href="#">跟踪订单</a></li>
-                    </ul>
-                </div>
-                <div class="left_m">
-                    <div class="left_m_t t_bg2">会员中心</div>
-                    <ul>
-                        <li><a href="Member_User.html">用户信息</a></li>
+                        <li><a href="order.html">我的订单</a></li>
+                        <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                        <li><a href="Member_Address.html">地址管理</a></li>
                         <li><a href="Member_Collect.html" class="now">我的收藏</a></li>
-                        <li><a href="Member_Msg.html">我的留言</a></li>
-                        <li><a href="Member_Links.html">推广链接</a></li>
-                        <li><a href="#">我的评论</a></li>
                     </ul>
                 </div>
                 <div class="left_m">
-                    <div class="left_m_t t_bg3">账户中心</div>
+                    <div class="left_m_t t_bg2">用户中心</div>
                     <ul>
-                        <li><a href="Member_Safe.html">账户安全</a></li>
-                        <li><a href="Member_Packet.html">我的红包</a></li>
-                        <li><a href="Member_Money.html">资金管理</a></li>
+                        <li><a href="User_detail.html">用户信息</a></li>
+                        <li><a href="Member_Member.html">用户列表</a></li>
                     </ul>
                 </div>
                 <div class="left_m">
-                    <div class="left_m_t t_bg4">分销中心</div>
+                    <div class="left_m_t t_bg3">商品管理</div>
                     <ul>
-                        <li><a href="Member_Member.html">我的会员</a></li>
-                        <li><a href="Member_Results.html">我的业绩</a></li>
-                        <li><a href="Member_Commission.html">我的佣金</a></li>
-                        <li><a href="Member_Cash.html">申请提现</a></li>
+                        <li><a href="Category.html">分类管理</a></li>
+                        <li><a href="Member_Product.html">商品管理</a></li>
+                    </ul>
+                </div>
+                <div class="left_m">
+                    <div class="left_m_t t_bg4" >咨询管理</div>
+                    <ul>
+                        <li><a href="news.html">咨询列表</a></li>
                     </ul>
                 </div>
             </div>
@@ -380,11 +358,18 @@
                     productId:0,
                     price:0.0
                 },
+                user:{
+                    username:"",
+                    id:null,
+                    roleId:null
+                },
                 isAdd:false
             }
         },
         async mounted() {
             var token = localStorage.getItem("token");
+            this.initLogin()
+            this.initCat()
             await this.getToken(token);
             this.getCollectPro(1,5);
         },
@@ -445,5 +430,33 @@
                 }
                 }
             },
+        initLogin() {
+            let token=localStorage.getItem("token");
+            axios.get('http://localhost:8080/getUser', {params: {token: token}})
+                .then((resp) => {
+                    console.log(resp.data);
+                    this.user.username=resp.data.data.userName
+                    this.user.id=resp.data.data.id
+                    this.user.roleId = resp.data.data.roleId
+                });
+        },
+        initCat() {
+            let token=localStorage.getItem("token");
+            axios.get('http://localhost:8080/getAllCats', {params: {token: token}})
+                .then((resp) => {
+                    console.log(resp.data);
+                    this.products=resp.data.data
+                    let sum = 0;
+                    let num=0;
+                    this.productLength=this.products.length
+                    for (let i = 0; i < this.products.length; i++) {
+                        sum += this.products[i].price*this.products[i].count;
+                        num+=this.products[i].count
+                        this.totalPrice=sum;
+                        this.totalCount=num;
+                    }
+
+                });
+        },
     })
 </script>
