--- a/src/main/resources/static/BuyCar_Two.html
+++ b/src/main/resources/static/BuyCar_Two.html
@@ -264,7 +264,7 @@
             暂无购买内容
         </div>
         <div class="two_t">
-            <span class="fr"><a href="#">修改</a></span>收货人信息
+            <span class="fr"><a @click="updateAddress">修改</a></span>收货人信息
         </div>
         <table border="0" class="peo_tab" style="width:1110px;" cellspacing="0" cellpadding="0">
             <tr>
@@ -579,6 +579,9 @@
                     this.productList = resp.data.data;
                 })
             },
+            updateAddress(){
+                window.location.href = 'Member_Address.html'
+            }
 
 
 
