--- a/src/main/resources/static/Category_update.html
+++ b/src/main/resources/static/Category_update.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type="text/css" rel="stylesheet" href="../css/style.css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
     <!--[if IE 6]>
     <script src="js/iepng.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        EvPNG.fix('div, ul, img, li, input, a');
-    </script>
+        <script type="text/javascript">
+           EvPNG.fix('div, ul, img, li, input, a'); 
+        </script>
     <![endif]-->
+        
+    <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+	<script type="text/javascript" src="js/select.js"></script>
 
-    <script type="text/javascript" src="../js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="../js/menu.js"></script>
-    <script type="text/javascript" src="../js/select.js"></script>
-
-    <script type="text/javascript" src="../js/vue.js"></script>
-    <script type="text/javascript" src="../js/axios.js"></script>
-    <link type="text/css" rel="stylesheet" href="../css/element.css"/>
-    <script type="text/javascript" src="../js/element.js"></script>
-
-    <title>分类管理-首页</title>
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript" src="js/axios.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/element.css"/>
+    <script type="text/javascript" src="js/element.js"></script>
+    
+<title>分类管理-修改</title>
 </head>
-<body>
-<div id="root4">
+<body>  
+<div id="root6">
     <!--Begin Header Begin-->
     <div class="soubg">
         <div class="sou">
@@ -151,7 +151,7 @@
     </div>
     <div class="m_top_bg">
         <div class="top">
-            <div class="m_logo"><a href="Index.html"><img src="images/logo1.png" /></a></div>
+            <div class="m_logo"><a href="../Index.html"><img src="images/logo1.png" /></a></div>
             <div class="m_search">
                 <form>
                     <input type="text" value="" class="m_ipt" />
@@ -233,66 +233,36 @@
                 </div>
             </div>
             <div class="m_right" style="text-align: center">
-                <h2><p>分类管理</p></h2>
-                分类名: <el-input style="width: 200px;"  v-model="categoryName"></el-input>
-                分类级别： <el-select v-model="categoryType" placeholder="请选择">
-                <el-option value="0" label="全部"></el-option>
-                <el-option value="1" label="一级分类"></el-option>
-                <el-option value="2" label="二级分类"></el-option>
-                <el-option value="3" label="三级分类"></el-option>
-            </el-select>
-                <el-button @click="select" type="primary" size="small">查询</el-button>
-                <el-button @click="add" type="primary" size="small">添加分类</el-button>
-                <el-table
-                        :data="page.list"
-                        stripe
-                        style="width: 100%">
-                    <el-table-column
-                            prop="createTime"
-                            label="日期"
-                            width="180">
-                    </el-table-column>
-                    <el-table-column
-                            prop="name"
-                            label="分类名"
-                            width="180">
-                    </el-table-column>
-                    <el-table-column
-                            prop="type"
-                            label="分类级别">
-                        <template slot-scope="scope">
-                            <div v-if="scope.row.type == 1">一级分类</div>
-                            <div v-else-if="scope.row.type == 2">二级分类</div>
-                            <div v-else-if="scope.row.type == 3">三级分类</div>
-                        </template>
-                    </el-table-column>
-                    <el-table-column
-                            prop="parentName"
-                            label="父类">
-                        <template slot-scope="scope">
-                            <div v-if="scope.row.parentName == null || scope.row.parentName == ''">无</div>
-                            <div v-else>{{scope.row.parentName }}</div>
-                        </template>
-                    </el-table-column>
-                    <el-table-column
-                            fixed="right"
-                            label="操作">
-                        <template slot-scope="scope">
-                            <el-button @click="update(scope.row)" type="primary" size="small">修改</el-button>
-                            <el-button type="danger" @click="isDelete(scope.row)" size="small">删除</el-button>
-                        </template>
-                    </el-table-column>
-                </el-table>
-                <el-pagination
-                        @size-change="handleSizeChange"
-                        @current-change="handleCurrentChange"
-                        :current-page="page.pageNum"
-                        :page-sizes="[5, 10, 15, 20]"
-                        :page-size="page.pageSize"
-                        layout="total, sizes, prev, pager, next, jumper"
-                        :total="page.total">
-                </el-pagination>
+                <h2><p>分类管理-修改分类</p></h2>
+                <el-form :model="category" :rules="rules" ref="category" label-width="100px" class="demo-ruleForm">
+                    <el-form-item style="width: 300px;" label="分类名称：" prop="name">
+                      <el-input v-model="category.name"></el-input>
+                    </el-form-item>
+                    <el-form-item style="width: 300px;" label="分类等级：" prop="typeName">
+                        <el-input  readonly v-model="typeName"></el-input>
+                    </el-form-item>
+                    <el-form-item style="width: 300px;" label="父类名称：" prop="parentName">
+                        <el-input  readonly v-model="parentName"></el-input>
+                    </el-form-item>
+                    <p></p>
+                    <el-form-item style="width: 300px;" label="分类等级" prop="type">
+                        <el-tree :data="categoryList" 
+                        :props="defaultProps" 
+                        @node-click="handleNodeClick">
+                            <template v-slot="{ node, data }">
+                              <span>{{data.name}}</span>
+                            </template>
+                          </el-tree>
+                    </el-form-item>
+                    <el-form-item>
+                      <el-button type="primary" @click="submitForm('category')">修改</el-button>
+                      <el-button @click="resetForm('category')">重置</el-button>
+                      <el-button type="primary" @click="back()">返回</el-button>
+                    </el-form-item>
+                  </el-form>
+                </div>
             </div>
+        </div>
         </div>
         <!--End 用户中心 End-->
         <!--Begin Footer Begin -->
@@ -381,79 +351,152 @@
     </div>
 </div>
 </body>
-<!--[if IE 6]>
-<script src="//letskillie6.googlecode.com/svn/trunk/2/zh_CN.js"></script>
-<![endif]-->
 </html>
 <script>
     new Vue({
-        el:"#root4",
-        data:{
-            page:[],
-            pageSize:5,
-            categoryName:'',
-            categoryType:'0'
+        el:"#root6",
+        data(){
+            var checkName = (rule, value, callback) => {
+                if (value != this.curName){
+                    axios.get('http://localhost:8080/checkCategoryName',{
+                        params:{
+                            name:value
+                        }
+                    }).then((result) => {
+                        console.log(result.data)
+                        if(result.data.code != 200){
+                            callback(new Error('分类名重复'));
+                        }else{
+                            callback();
+                        }
+                    })
+                }else {
+                    callback()
+                }
+
+            }
+            var checkType = (rule, value, callback) =>{
+                if(this.category.type == 0){
+                    callback(new Error('请选择你要在哪个分类下添加子分类！'));
+                }else if(this.category.type >3){
+                    callback(new Error('三级分类下不能添加分类！'));
+                }else{
+                    callback();
+                }
+            }
+            return{
+                categoryList:[],
+                defaultProps:{
+                    children: 'childCategory',
+                    label: 'name'
+                },
+                category:{
+                    id:0,
+                    name:'',
+                    type:0,
+                    parentId:-1
+                },
+                typeName:'',
+                parentName:'',
+                curName:'',
+                rules:{
+                name:[
+                    { required: true, message: '请输入分类名！', trigger: 'blur'},
+                    { validator:checkName,trigger:'blur'}
+                ],
+                 typeName:[
+                    {validator:checkType,trigger:'change'}
+                ]
+            }
+            }
         },
         mounted(){
-            this.getCategoryList(1,5)
+            const search =  new URLSearchParams(window.location.search);
+            const id = search.get("id");
+            this.category.id = id;
+            this.getCategory()
+            this.initCategory(id)
         },
         methods:{
-            add(){
-                window.location.href="Category_Add.html"
-            },
-            handleSizeChange(pageSize) {
-                this.page.pageSize = pageSize
-                this.getCategoryList(1,this.page.pageSize)
-            },
-            handleCurrentChange(pageNum) {
-                this.page.pageNum = pageNum
-                this.getCategoryList(pageNum,this.page.pageSize)
-            },
-            getCategoryList(pageNum,pageSize){
-                axios.get('http://localhost:8080/getAllCategories',{
+            initCategory(id){
+                axios.get('http://localhost:8080/getCategory',{
                     params:{
-                        name:this.categoryName,
-                        type:this.categoryType,
-                        currentPageNo:pageNum,
-                        pageSize:pageSize
-                    }
-                }).then((result) => {
-                    console.log(result.data);
-                    this.page = result.data.data
-                })
-            },
-            select(){
-                this.getCategoryList(1,5)
-            },
-            update(row){
-                window.location.href='Category_Update.html?id=' + row.id
-            },
-            isDelete(row){
-                console.log(row);
-                axios.get("http://localhost:8080/checkProductExitsByCategoryId",{
-                    params:{
-                        type:row.type,
-                        id:row.id
+                        id:id
                     }
                 }).then((result) =>{
                     console.log(result.data);
-                    if (result.data.code == 200){
-                        this.deleteCategory(row.id)
-                    }else {
-                        alert(result.data.message);
+                    if( result.data.data.type == 1 ){
+                        this.typeName = "一级分类"
+                        this.parentName = "无"
+                    }else if(result.data.data.type == 2){
+                        this.typeName = "二级分类"
+                        this.parentName = result.data.data.parentName
+                    }else if(result.data.data.type == 3){
+                        this.typeName = "三级分类"
+                        this.parentName = result.data.data.parentName
                     }
+                    this.category.name = result.data.data.name
+                    this.category.type = result.data.data.type
+                    this.category.parentId = result.data.data.parentId
+                    this.curName = result.data.data.name
                 })
             },
-            deleteCategory(id){
-                if (confirm("你确定要删除吗？")){
-                    axios.get('http://localhost:8080/deleteCategory',{
-                        params:{
-                            id:id
+            back(){
+              window.location.href='Category.html'
+            },
+            submitForm(formName) {
+                this.$refs[formName].validate((valid) => {
+                if (valid) {
+                    axios.post('http://localhost:8080/updateCategory',this.category).then((result) => {
+                        if(result.data.code == 200){
+                            alert("修改成功！")
+                            window.location.href = "Category.html"
                         }
-                    }).then((result) => {
-                        console.log(result.data);
-                        this.getCategoryList(1,5);
-                    })
+                    });
+                } else {
+                    console.log('error submit!!');
+                    return false;
+                }
+                });
+            },
+            resetForm(formName) {
+                this.$refs[formName].resetFields()
+                this.typeName=''
+                 this.parentName=''
+            },
+            getCategory(){
+                axios.get('http://localhost:8080/getAllCategory').then((result) => {
+                    console.log(result.data);
+                    this.categoryList = [{
+                        name: '全部分类',
+                        childCategory: result.data.data,
+                        type:0
+                    }];
+                });
+            },
+            handleNodeClick(node) {
+                console.log('Node clicked:', node.type);
+                if( node.type == 0){
+                    this.typeName = "一级分类"
+                    this.parentName = "无"
+                    this.category.type = 2
+                    this.category.parentId = node.id
+                }else if(node.type == 1){
+                    this.typeName = "二级分类"
+                    this.category.type = node.type +1;
+                    this.parentName = node.name
+                    this.category.parentId = node.id
+                }else if(node.type == 2){
+                    this.typeName = "三级分类"
+                    this.category.type = node.type+1;
+                    this.parentName = node.name
+                    this.category.parentId = node.id
+                }else if(node.type == 3){
+                    this.category.type = node.type+1;
+                    this.typeName = ""
+                    this.parentName = ""
+                    this.category.parentId = -1
+                    return;
                 }
             }
         }
