--- a/src/main/resources/static/Member_Address_Update.html
+++ b/src/main/resources/static/Member_Address_Update.html
@@ -2,28 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link type="text/css" rel="stylesheet" href="../css/style.css" />
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
     <!--[if IE 6]>
-    <script src="../js/iepng.js" type="text/javascript"></script>
-        <script type="text/javascript">
-           EvPNG.fix('div, ul, img, li, input, a'); 
-        </script>
+    <script src="js/iepng.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        EvPNG.fix('div, ul, img, li, input, a');
+    </script>
     <![endif]-->
         
-    <script type="text/javascript" src="../js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="../js/menu.js"></script>    
+    <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
         
-	<script type="text/javascript" src="../js/select.js"></script>
-
-    <script type="text/javascript" src="../js/vue.js"></script>
-    <script type="text/javascript" src="../js/axios.js"></script>
-    <link type="text/css" rel="stylesheet" href="../css/element.css"/>
-    <script type="text/javascript" src="../js/element.js"></script>
-<title>用户管理</title>
+	<script type="text/javascript" src="js/select.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript" src="js/axios.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/element.css"/>
+    <script type="text/javascript" src="js/element.js"></script>
+    <script type="text/javascript" src="js/element-china-area-data.iife.js"></script>
+<title>尤洪</title>
 </head>
 <body>  
-<div id="root8">
-    <!--Begin Header Begin-->
+  <div id="root7">
+      <!--Begin Header Begin-->
 <div class="soubg">
 	<div class="sou">
     	<!--Begin 所在收货地区 Begin-->
@@ -194,109 +194,73 @@
 <div class="i_bg bg_color">
     <!--Begin 用户中心 Begin -->
 	<div class="m_content">
-   		<div class="m_left">
-        	<div class="left_n">管理中心</div>
+        <div class="m_left">
+            <div class="left_n">管理中心</div>
             <div class="left_m">
-            	<div class="left_m_t t_bg1">订单中心</div>
+                <div class="left_m_t t_bg1">订单中心</div>
+
                 <ul>
-                	<li><a href="Member_Order.html">我的订单</a></li>
-                    <li><a href="Member_Address.html">收货地址</a></li>
-                    <li><a href="#">缺货登记</a></li>
-                    <li><a href="#">跟踪订单</a></li>
-                </ul>
-            </div>
-            <div class="left_m">
-            	<div class="left_m_t t_bg2">会员中心</div>
-                <ul>
-                	<li><a href="Member_User.html">用户信息</a></li>
+                    <li><a href="order.html">我的订单</a></li>
+                    <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                    <li><a href="member/Member_Address.html" class="now">地址管理</a></li>
                     <li><a href="Member_Collect.html">我的收藏</a></li>
-                    <li><a href="Member_Msg.html">我的留言</a></li>
-                    <li><a href="Member_Links.html">推广链接</a></li>
-                    <li><a href="#">我的评论</a></li>
                 </ul>
             </div>
             <div class="left_m">
-            	<div class="left_m_t t_bg3">账户中心</div>
+                <div class="left_m_t t_bg2">用户中心</div>
                 <ul>
-                	<li><a href="Member_Safe.html">账户安全</a></li>
-                    <li><a href="Member_Packet.html">我的红包</a></li>
-                    <li><a href="Member_Money.html">资金管理</a></li>
+                    <li><a href="User_detail.html">用户信息</a></li>
+                    <li><a href="Member_Member.html">用户列表</a></li>
                 </ul>
             </div>
             <div class="left_m">
-            	<div class="left_m_t t_bg4">分销中心</div>
+                <div class="left_m_t t_bg3">商品管理</div>
                 <ul>
-                	<li><a href="Member_Member.html" class="now">我的会员</a></li>
-                    <li><a href="Member_Results.html">我的业绩</a></li>
-                    <li><a href="Member_Commission.html">我的佣金</a></li>
-                    <li><a href="Member_Cash.html">申请提现</a></li>
+                    <li><a href="Category.html">分类管理</a></li>
+                    <li><a href="Member_Product.html">商品管理</a></li>
+                </ul>
+            </div>
+            <div class="left_m">
+                <div class="left_m_t t_bg4">咨询管理</div>
+                <ul>
+                    <li><a href="news.html">咨询列表</a></li>
                 </ul>
             </div>
         </div>
-		<div class="m_right">
-            <p></p>		
-			<div class="mem_tit">
-            	用户管理
+        <div class="m_right">
+            <div class="mem_tit">
+            	<a >修改地址</a>
             </div>
-            <div class="address">
-                登录名: <el-input style="width: 200px;"  v-model="loginName"></el-input>
-                性别： <el-select v-model="sex" placeholder="请选择">
-                <el-option value="0" label="全部"></el-option>
-                <el-option value="1" label="男"></el-option>
-                <el-option value="2" label="女"></el-option>
-            </el-select>
-                <el-button @click="select" type="primary" size="small">查询</el-button>
-                <el-button @click="add" type="primary" size="small">添加用户</el-button>
-            <el-table
-                  :data="page.list"
-                  stripe
-                  style="width: 100%;text-align: center;">
-              <el-table-column
-                      prop="roleId"
-                      label="角色" width:="50">
-                  <template slot-scope="scope">
-                      <div v-if="scope.row.roleId == 1">超级管理员</div>
-                      <div v-if="scope.row.roleId == 2">管理员</div>
-                      <div v-if="scope.row.roleId == 3">普通用户</div>
-                  </template>
-              </el-table-column>
-              <el-table-column
-                      prop="loginName"
-                      label="登录名" width="100">
-              </el-table-column>
-              <el-table-column
-                      prop="mobile"
-                      label="电话号码">
-              </el-table-column>
-              <el-table-column
-                    width="100"
-                      prop="sex"
-                      label="性别">
-                <template slot-scope="scope">
-                    <div v-if="scope.row.sex == 1">男</div>
-                    <div v-if="scope.row.sex == 2">女</div>
-                </template>
-              </el-table-column>
-              <el-table-column
-                      prop="email"
-                      label="邮箱">
-              </el-table-column>
-              <el-table-column
-                      fixed="right"
-                      label="操作">
-              <template slot-scope="scope">
-                      <el-button @click="update(scope.row)" type="primary" size="small">修改</el-button>
-                      <el-button type="danger" @click="deleteAddress(scope.row)" size="small">删除</el-button>
-              </template>
-              </el-table-column>
-              </el-table>
-              <el-pagination
-                  @current-change="handleCurrentChange"
-                  :current-page="page.pageNum"
-                  :page-size="page.pageSize"
-                  layout="total, prev,pager, next, jumper"
-                  :total="page.total">
-             </el-pagination>
+            <el-form style="text-align: center;" :model="address" :rules="rules" ref="ruleForm" label-width="100px" class="demo-ruleForm">
+              <el-form-item style="width: 500px;" label="地址" prop="addressList">
+                <el-cascader style="float: left;"
+                  size="large"
+                  :options="pcTextArr"
+                  v-model="address.addressList">
+                </el-cascader>
+              </el-form-item>
+              <el-form-item style="width: 500px;"  label="详细地址" prop="detailAddress">
+                <el-input v-model="address.detailAddress"></el-input>
+              </el-form-item>
+              <el-form-item style="width: 500px;" label="收件人" prop="recipient">
+                <el-input v-model="address.recipient"></el-input>
+              </el-form-item>
+              <el-form-item style="width: 500px;" label="电话" prop="phone">
+                <el-input v-model="address.phone"></el-input>
+              </el-form-item>
+              <el-form-item style="width: 500px;" label="备注" prop="remark">
+                <el-input v-model="address.remark"></el-input>
+              </el-form-item>
+              <el-form-item style="width: 500px;" label="设为默认地址">
+                <el-switch style="float: left; " v-model="address.isSure"></el-switch>
+              </el-form-item>
+              <el-form-item>
+                <el-button type="primary" @click="submitForm('ruleForm')">修改</el-button>
+                <el-button @click="resetForm('ruleForm')">重置</el-button>
+                <el-button type="primary" @click="back">返回</el-button>
+              </el-form-item>
+            </el-form>
+          </div>
         </div>
     </div>
 	<!--End 用户中心 End--> 
@@ -307,7 +271,6 @@
               <tr>
                 <td width="72"><img src="images/b1.png" width="62" height="62" /></td>
                 <td><h2>正品保障</h2>正品行货  放心购买</td>
-
               </tr>
             </table>
 			<table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
@@ -331,6 +294,7 @@
         </div>
     </div>
     <div class="b_nav">
+
     	<dl>                                                                                            
         	<dt><a href="#">新手上路</a></dt>
             <dd><a href="#">售后流程</a></dd>
@@ -384,8 +348,7 @@
     </div>
     <!--End Footer End -->    
 </div>
-</div>
-
+  </div>
 </body>
 
 
@@ -394,74 +357,134 @@
 <![endif]-->
 </html>
 <script>
-    new Vue({
-        el:"#root8",
-        data() {
-            return {
-                page:[],
-                sex:0,
-                loginName:'',
-                currentUser:{}
-            }
-        },
-        async mounted() {
-             var token = localStorage.getItem("token");
-             await this.getToken(token);
-            this. getUserList(1,5);
-        },
-        methods: {
-            async getToken(token){
-                await axios.get('http://localhost:8080/getUser',{
-                    params:{
-                        token:token
-                    }
-                }).then((result) => {
-                    console.log(result);
-                    this.currentUser = result.data.data
-                });
-            },
-            getUserList(currentPageNo,pageSize){
-                axios.get('http://localhost:8080//getUserList',{
-                params:{
-                    roleId:this.currentUser.roleId,
-                    sex:this.sex,
-                    loginName:this.loginName,
-                    currentPageNo:currentPageNo,
-                    pageSize:pageSize,
-                }
-                }).then((result) => {
-                console.log(result.data)
-                this.page = result.data.data
-                });
-            },
-            handleCurrentChange(pageNum) {
-                this.page.pageNum = pageNum
-                this.getUserList(pageNum,this.page.pageSize)
-            },
-            update(row){
-                window.location.href = "Member_Member_Update.html?id=" + row.id
-            },
-            deleteAddress(row){
-                if(confirm("你确定要删除该用户吗?")){
-                    axios.get('http://localhost:8080//deleteUser',{
-                        params:{
-                            id:row.id
-                        }
-                    }).then((result) => {
-                        console.log(result.data);
-                        if(result.data.code == 200){
-                            alert("删除成功!");
-                            this. getUserList(this.page.pageNum,this.page.pageSize);
-                        }
-                    });
-                }
-            },
-            add(){
-                window.location.href="Member_Member_Add.html"
-            },
-            select(){
-                this.getUserList(this.page.pageNum,this.page.pageSize)
-            },
+  new Vue({
+    el:"#root7",
+    data() {
+      const checkPhone = (rule, value, callback) =>{
+        var phone = /^1\d{10}$/
+        if(!phone.test(value)){
+          callback(new Error("请输入一个11位的1开头的数字"))
+        }else{
+          callback()
         }
-    })
+      }
+      return {
+        address:{
+          addressList:'',
+          detailAddress:'',
+          recipient:'',
+          phone:'',
+          remark:'',
+          isSure:false,
+        },
+        id:0,
+        totalAddess:'',
+        updateId:0,
+        pcTextArr:elementChinaAreaData.pcaTextArr,
+        user:{},
+        page:[],
+        rules:{
+          addressList:[
+            {required: true, message: '请选择地址', trigger: 'change'}
+          ],
+          detailAddress:[
+            {required: true, message: '请输入详细地址', trigger: 'blur'},
+            { min: 2, max: 10, message: '长度在 3 到 10 个字符', trigger: 'blur' }
+          ],
+          recipient:[
+            {required: true, message: '请输入收件名', trigger: 'blur'},
+            { min: 2, max: 5, message: '长度在 3 到 5 个字符', trigger: 'blur' }
+          ],
+          phone:[
+            {required: true, message: '请输入电话号码', trigger: 'blur'},
+            { validator: checkPhone, trigger: 'blur'}          
+          ],
+          remark:[
+            { min: 1, max: 20, message: '长度在 1 到 20 个字符', trigger: 'blur' }
+          ],
+        }
+      }
+    },
+    async mounted() {
+        var token = window.localStorage.getItem("token");
+       await this.getToken(token);
+      var search = new URLSearchParams(window.location.search);
+      var id = search.get("id");
+      this.id = id;
+      axios.get("http://localhost:8080/getAddressByIdAndUserId",{
+          params:{
+            id:id,
+            userId:this.user.id
+          }
+        }).then((result) => {
+          console.log(result.data);
+          const tempList = result.data.data.address.split('/');
+          var addList = [];
+          for (let i = 0; i < tempList.length; i++) {
+            if(i < 3) {
+              addList.push(tempList[i]);
+            }else{
+              this.address.detailAddress = tempList[i];
+            }
+          }
+          this.address.addressList = addList;
+          this.address.recipient = result.data.data.recipient;
+          this.address.phone = result.data.data.phone;
+          this.address.remark = result.data.data.remark;
+          if(result.data.data.isSure == 1 ){
+            this.address.isSure = true;
+          }else{
+            this.address.isSure = false;
+          }
+        });
+    },
+    methods: {
+        async getToken(token){
+            await axios.get('http://localhost:8080/getUser',{
+                params:{
+                    token:token
+                }
+            }).then((result) => {
+                console.log(result);
+                this.user = result.data.data
+            });
+        },
+      submitForm(formName) {
+        this.$refs[formName].validate((valid) => {
+          this.totalAddess = this.address.addressList.join('/')+'/'+ this.address.detailAddress;
+          console.log(this.address.address)
+          if (valid) {
+            axios.get('http://localhost:8080/updateAddress',{
+              params:{
+                id:this.id,
+                address:this.totalAddess,
+                userId:this.user.id,
+                remark:this.address.remark,
+                recipient:this.address.recipient,
+                phone:this.address.phone,
+                isSure:this.address.isSure ? 1:0
+              }
+            }).then((result) => {
+              console.log(result.data);
+              if(result.data.code == 200){
+                alert("修改成功!")
+                window.location.href = "Member_Address.html"
+              }
+            });
+          } else {
+            console.log('error submit!!');
+            return false;
+          }
+        });
+      },
+      resetForm(formName) {
+        this.$refs[formName].resetFields();
+        this.address.addressList='';
+        this.address.isSure = false;
+      },
+      back(){
+        window.location.href = "Member_Address.html"
+      }
+    },
+  })
 </script>
