--- a/src/main/resources/static/Member_Member.html
+++ b/src/main/resources/static/Member_Member.html
@@ -2,23 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link type="text/css" rel="stylesheet" href="../css/style.css" />
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
     <!--[if IE 6]>
-    <script src="../js/iepng.js" type="text/javascript"></script>
-        <script type="text/javascript">
-           EvPNG.fix('div, ul, img, li, input, a'); 
-        </script>
+    <script src="js/iepng.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        EvPNG.fix('div, ul, img, li, input, a');
+    </script>
     <![endif]-->
         
-    <script type="text/javascript" src="../js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="../js/menu.js"></script>    
+    <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
         
-	<script type="text/javascript" src="../js/select.js"></script>
+	<script type="text/javascript" src="js/select.js"></script>
 
-    <script type="text/javascript" src="../js/vue.js"></script>
-    <script type="text/javascript" src="../js/axios.js"></script>
-    <link type="text/css" rel="stylesheet" href="../css/element.css"/>
-    <script type="text/javascript" src="../js/element.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript" src="js/axios.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/element.css"/>
+    <script type="text/javascript" src="js/element.js"></script>
 <title>用户管理</title>
 </head>
 <body>  
@@ -194,42 +194,36 @@
 <div class="i_bg bg_color">
     <!--Begin 用户中心 Begin -->
 	<div class="m_content">
-   		<div class="m_left">
-        	<div class="left_n">管理中心</div>
+        <div class="m_left">
+            <div class="left_n">管理中心</div>
             <div class="left_m">
-            	<div class="left_m_t t_bg1">订单中心</div>
+                <div class="left_m_t t_bg1">订单中心</div>
+
                 <ul>
-                	<li><a href="Member_Order.html">我的订单</a></li>
-                    <li><a href="Member_user.html">收货地址</a></li>
-                    <li><a href="#">缺货登记</a></li>
-                    <li><a href="#">跟踪订单</a></li>
-                </ul>
-            </div>
-            <div class="left_m">
-            	<div class="left_m_t t_bg2">会员中心</div>
-                <ul>
-                	<li><a href="Member_User.html">用户信息</a></li>
+                    <li><a href="order.html">我的订单</a></li>
+                    <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                    <li><a href="member/Member_Address.html">地址管理</a></li>
                     <li><a href="Member_Collect.html">我的收藏</a></li>
-                    <li><a href="Member_Msg.html">我的留言</a></li>
-                    <li><a href="Member_Links.html">推广链接</a></li>
-                    <li><a href="#">我的评论</a></li>
                 </ul>
             </div>
             <div class="left_m">
-            	<div class="left_m_t t_bg3">账户中心</div>
+                <div class="left_m_t t_bg2">用户中心</div>
                 <ul>
-                	<li><a href="Member_Safe.html">账户安全</a></li>
-                    <li><a href="Member_Packet.html">我的红包</a></li>
-                    <li><a href="Member_Money.html">资金管理</a></li>
+                    <li><a href="User_detail.html">用户信息</a></li>
+                    <li><a href="Member_Member.html" class="now">用户列表</a></li>
                 </ul>
             </div>
             <div class="left_m">
-            	<div class="left_m_t t_bg4">分销中心</div>
+                <div class="left_m_t t_bg3">商品管理</div>
                 <ul>
-                	<li><a href="Member_Member.html" class="now">我的会员</a></li>
-                    <li><a href="Member_Results.html">我的业绩</a></li>
-                    <li><a href="Member_Commission.html">我的佣金</a></li>
-                    <li><a href="Member_Cash.html">申请提现</a></li>
+                    <li><a href="Category.html">分类管理</a></li>
+                    <li><a href="Member_Product.html">商品管理</a></li>
+                </ul>
+            </div>
+            <div class="left_m">
+                <div class="left_m_t t_bg4">咨询管理</div>
+                <ul>
+                    <li><a href="news.html">咨询列表</a></li>
                 </ul>
             </div>
         </div>
@@ -238,46 +232,65 @@
 			<div class="mem_tit">
             	用户管理
             </div>
-            <el-form style="text-align: center;" :model="user" :rules="rules" ref="user" label-width="100px" class="demo-ruleForm">
-                <el-form-item style="width: 500px;" label="登录名" prop="loginName">
-                    <el-input v-model="user.loginName"></el-input>
-                </el-form-item>
-                <el-form-item style="width: 500px;"  label="密码" prop="password">
-                  <el-input type="password" v-model="user.password"></el-input>
-                </el-form-item>
-                <el-form-item style="width: 500px;" label="二次密码" prop="rePassword">
-                  <el-input type="password" v-model="user.rePassword"></el-input>
-                </el-form-item>
-                <el-form-item style="width: 500px;" label="电话" prop="mobile">
-                  <el-input  v-model="user.mobile"></el-input>
-                </el-form-item>
-                <el-form-item style="width: 500px;" label="邮箱" prop="email">
-                  <el-input v-model="user.email"></el-input>
-                </el-form-item>
-                <el-form-item style="width: 500px;" prop="sex" label="性别">
-                  <el-select style="float: left;" v-model="user.sex">
-                    <el-option label="请选择" value="0"></el-option>
-                    <el-option label="男" value="1"></el-option>
-                    <el-option label="女" value="2"></el-option>
-                  </el-select>
-                </el-form-item>
-                <el-form-item style="width: 500px;" prop="roleId" label="角色">
-                    <el-select style="float: left;" v-model="user.roleId" placeholder="请选择">
-                        <el-option
-                                v-for="item in role"
-                                :key="item.roleId"
-                                :label="item.roleName"
-                                :value="item.roleId"
-                                :disabled="item.disabled">
-                        </el-option>
-                    </el-select>
-                </el-form-item>
-                <el-form-item>
-                  <el-button type="primary" @click="submitForm('user')">添加</el-button>
-                  <el-button @click="resetForm('user')">重置</el-button>
-                  <el-button type="primary" @click="back">返回</el-button>
-                </el-form-item>
-              </el-form>
+            <div class="address">
+                登录名: <el-input style="width: 200px;"  v-model="loginName"></el-input>
+                性别： <el-select v-model="sex" placeholder="请选择">
+                <el-option value="0" label="全部"></el-option>
+                <el-option value="1" label="男"></el-option>
+                <el-option value="2" label="女"></el-option>
+            </el-select>
+                <el-button @click="select" type="primary" size="small">查询</el-button>
+                <el-button @click="add" type="primary" size="small">添加用户</el-button>
+            <el-table
+                  :data="page.list"
+                  stripe
+                  style="width: 100%;text-align: center;">
+              <el-table-column
+                      prop="roleId"
+                      label="角色" width:="50">
+                  <template slot-scope="scope">
+                      <div v-if="scope.row.roleId == 1">超级管理员</div>
+                      <div v-if="scope.row.roleId == 2">管理员</div>
+                      <div v-if="scope.row.roleId == 3">普通用户</div>
+                  </template>
+              </el-table-column>
+              <el-table-column
+                      prop="loginName"
+                      label="登录名" width="100">
+              </el-table-column>
+              <el-table-column
+                      prop="mobile"
+                      label="电话号码">
+              </el-table-column>
+              <el-table-column
+                    width="100"
+                      prop="sex"
+                      label="性别">
+                <template slot-scope="scope">
+                    <div v-if="scope.row.sex == 1">男</div>
+                    <div v-if="scope.row.sex == 2">女</div>
+                </template>
+              </el-table-column>
+              <el-table-column
+                      prop="email"
+                      label="邮箱">
+              </el-table-column>
+              <el-table-column
+                      fixed="right"
+                      label="操作">
+              <template slot-scope="scope">
+                      <el-button @click="update(scope.row)" type="primary" size="small">修改</el-button>
+                      <el-button type="danger" @click="deleteAddress(scope.row)" size="small">删除</el-button>
+              </template>
+              </el-table-column>
+              </el-table>
+              <el-pagination
+                  @current-change="handleCurrentChange"
+                  :current-page="page.pageNum"
+                  :page-size="page.pageSize"
+                  layout="total, prev,pager, next, jumper"
+                  :total="page.total">
+             </el-pagination>
         </div>
     </div>
 	<!--End 用户中心 End--> 
@@ -378,113 +391,17 @@
     new Vue({
         el:"#root8",
         data() {
-            const checkPhone = (rule, value, callback) =>{
-                let phone = /^[1][3,5,7,8][0-9]{9}$/;
-                if(!phone.test(value)){
-                    callback(new Error("请输入一个11位的1开头的数字"))
-                }else{
-                    callback()
-                }
-            }
-            const checkLoginName = (rule, value, callback) =>{
-                axios.get('http://localhost:8080/checkUserExist',{
-                    params:{
-                        loginName:value
-                    }
-                }).then((result) => {
-                    if(result.data.code == 200){
-                        callback(new Error("该登录名已经存在！"))
-                    }else{
-                        callback()
-                    }
-                });
-            }
-            const checkPassword = (rule, value, callback) =>{
-                let password = /^[a-zA-Z0-9]{6,12}$/;
-                if(!password.test(value)){
-                    callback(new Error("密码格式应该为6-12位的英文加数字"))
-                }else{
-                    callback()
-                }
-            }
-            const checkrePassword = (rule, value, callback) =>{
-                let password = /^[a-zA-Z0-9]{6,12}$/;
-                if(!password.test(value)){
-                    callback(new Error("密码格式应该为6-12位的英文加数字"))
-                }else if(value != this.user.password){
-                    callback(new Error("两次密码输入不正确！"))
-                }else{
-                    callback()
-                }
-            }
-            const checkemail = (rule, value, callback) =>{
-                let email = /\w+@+.\w+.com/;
-                if(!email.test(value)){
-                    callback(new Error("邮箱格式应该为——@——.com"))
-                }else{
-                    callback()
-                }
-            }
-            const checkSex = (rule, value, callback) =>{
-                if(value == "0"){
-                    callback(new Error("请选择性别！"))
-                }else{
-                    callback()
-                }
-            }
             return {
                 page:[],
-                user:{
-                    loginName:'',
-                    password:'',
-                    rePassword:'',
-                    sex:"0",
-                    email:'',
-                    mobile:'',
-                    roleId:3
-                },
-                currentUser:{},
-                role:[
-                    {roleId:1,roleName:'超级管理员',disabled: false},
-                    {roleId:2,roleName:'管理员',disabled: false},
-                    {roleId:3,roleName:"普通用户",disabled: false}
-                ],
-                rules:{
-                    loginName:[
-                        {required: true, message: '请输入登录名', trigger: 'blur'},
-                        { validator: checkLoginName, trigger: 'blur'}          
-                    ],
-                    password:[
-                        {required: true, message: '请输入密码', trigger: 'blur'},
-                        { validator: checkPassword, trigger: 'blur'}          
-                    ],
-                    rePassword:[
-                        {required: true, message: '请输入二次密码', trigger: 'blur'},
-                        { validator: checkrePassword, trigger: 'blur'}          
-                    ],
-                    mobile:[
-                        {required: true, message: '请输入电话号码', trigger: 'blur'},
-                        { validator: checkPhone, trigger: 'blur'}          
-                    ],
-                    sex:[
-                        { validator: checkSex, trigger: 'change'}          
-                    ],
-                    email:[
-                        {required: true, message: '请输入邮箱', trigger: 'blur'},
-                        { validator: checkemail, trigger: 'blur'}          
-                    ],
-                }
+                sex:0,
+                loginName:'',
+                currentUser:{}
             }
         },
         async mounted() {
-            var token = localStorage.getItem("token");
-            await this.getToken(token);
-
-            for (let i = 0; i < this.role.length; i++) {
-                if(this.role[i].roleId <= this.currentUser.roleId){
-                    this.role[i].disabled = true;
-                }
-            }
+             var token = localStorage.getItem("token");
+             await this.getToken(token);
+            this. getUserList(1,5);
         },
         methods: {
             async getToken(token){
@@ -497,28 +414,48 @@
                     this.currentUser = result.data.data
                 });
             },
-            submitForm(formName) {
-                this.$refs[formName].validate((valid) => {
-                if (valid) {
-                    axios.post('http://localhost:8080/addUser',this.user).then((result) => {
-                    console.log(result.data);
-                    if(result.data.code == 200){
-                        alert("添加成功!")
-                        window.location.href = "Member_Member.html"
-                    }
-                    });
-                } else {
-                    console.log('error submit!!');
-                    return false;
+            getUserList(currentPageNo,pageSize){
+                axios.get('http://localhost:8080//getUserList',{
+                params:{
+                    roleId:this.currentUser.roleId,
+                    sex:this.sex,
+                    loginName:this.loginName,
+                    currentPageNo:currentPageNo,
+                    pageSize:pageSize,
                 }
+                }).then((result) => {
+                console.log(result.data)
+                this.page = result.data.data
                 });
             },
-            resetForm(formName) {
-                this.$refs[formName].resetFields();
+            handleCurrentChange(pageNum) {
+                this.page.pageNum = pageNum
+                this.getUserList(pageNum,this.page.pageSize)
             },
-            back(){
-                window.location.href = "Member_Member.html"
-            }
+            update(row){
+                window.location.href = "Member_Member_Update.html?id=" + row.id
+            },
+            deleteAddress(row){
+                if(confirm("你确定要删除该用户吗?")){
+                    axios.get('http://localhost:8080//deleteUser',{
+                        params:{
+                            id:row.id
+                        }
+                    }).then((result) => {
+                        console.log(result.data);
+                        if(result.data.code == 200){
+                            alert("删除成功!");
+                            this. getUserList(this.page.pageNum,this.page.pageSize);
+                        }
+                    });
+                }
+            },
+            add(){
+                window.location.href="Member_Member_Add.html"
+            },
+            select(){
+                this.getUserList(this.page.pageNum,this.page.pageSize)
+            },
         }
     })
 </script>
