--- a/src/main/resources/static/Member_Member_Update.html
+++ b/src/main/resources/static/Member_Member_Update.html
@@ -2,23 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link type="text/css" rel="stylesheet" href="../css/style.css" />
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
     <!--[if IE 6]>
-    <script src="../js/iepng.js" type="text/javascript"></script>
-        <script type="text/javascript">
-           EvPNG.fix('div, ul, img, li, input, a'); 
-        </script>
+    <script src="js/iepng.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        EvPNG.fix('div, ul, img, li, input, a');
+    </script>
     <![endif]-->
         
-    <script type="text/javascript" src="../js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="../js/menu.js"></script>    
+    <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
         
-	<script type="text/javascript" src="../js/select.js"></script>
+	<script type="text/javascript" src="js/select.js"></script>
 
-    <script type="text/javascript" src="../js/vue.js"></script>
-    <script type="text/javascript" src="../js/axios.js"></script>
-    <link type="text/css" rel="stylesheet" href="../css/element.css"/>
-    <script type="text/javascript" src="../js/element.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript" src="js/axios.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/element.css"/>
+    <script type="text/javascript" src="js/element.js"></script>
 <title>用户管理</title>
 </head>
 <body>  
@@ -194,42 +194,36 @@
 <div class="i_bg bg_color">
     <!--Begin 用户中心 Begin -->
 	<div class="m_content">
-   		<div class="m_left">
-        	<div class="left_n">管理中心</div>
+        <div class="m_left">
+            <div class="left_n">管理中心</div>
             <div class="left_m">
-            	<div class="left_m_t t_bg1">订单中心</div>
+                <div class="left_m_t t_bg1">订单中心</div>
+
                 <ul>
-                	<li><a href="Member_Order.html">我的订单</a></li>
-                    <li><a href="Member_user.html">收货地址</a></li>
-                    <li><a href="#">缺货登记</a></li>
-                    <li><a href="#">跟踪订单</a></li>
-                </ul>
-            </div>
-            <div class="left_m">
-            	<div class="left_m_t t_bg2">会员中心</div>
-                <ul>
-                	<li><a href="Member_User.html">用户信息</a></li>
+                    <li><a href="order.html">我的订单</a></li>
+                    <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                    <li><a href="member/Member_Address.html">地址管理</a></li>
                     <li><a href="Member_Collect.html">我的收藏</a></li>
-                    <li><a href="Member_Msg.html">我的留言</a></li>
-                    <li><a href="Member_Links.html">推广链接</a></li>
-                    <li><a href="#">我的评论</a></li>
                 </ul>
             </div>
             <div class="left_m">
-            	<div class="left_m_t t_bg3">账户中心</div>
+                <div class="left_m_t t_bg2">用户中心</div>
                 <ul>
-                	<li><a href="Member_Safe.html">账户安全</a></li>
-                    <li><a href="Member_Packet.html">我的红包</a></li>
-                    <li><a href="Member_Money.html">资金管理</a></li>
+                    <li><a href="User_detail.html">用户信息</a></li>
+                    <li><a href="Member_Member.html" class="now">用户列表</a></li>
                 </ul>
             </div>
             <div class="left_m">
-            	<div class="left_m_t t_bg4">分销中心</div>
+                <div class="left_m_t t_bg3">商品管理</div>
                 <ul>
-                	<li><a href="Member_Member.html" class="now">我的会员</a></li>
-                    <li><a href="Member_Results.html">我的业绩</a></li>
-                    <li><a href="Member_Commission.html">我的佣金</a></li>
-                    <li><a href="Member_Cash.html">申请提现</a></li>
+                    <li><a href="Category.html">分类管理</a></li>
+                    <li><a href="Member_Product.html">商品管理</a></li>
+                </ul>
+            </div>
+            <div class="left_m">
+                <div class="left_m_t t_bg4">咨询管理</div>
+                <ul>
+                    <li><a href="news.html">咨询列表</a></li>
                 </ul>
             </div>
         </div>
