--- a/src/main/resources/static/Member_Product.html
+++ b/src/main/resources/static/Member_Product.html
@@ -187,37 +187,30 @@
                 <div class="left_m_t t_bg1">订单中心</div>
 
                 <ul>
-                    <li><a href="Member_Product.html" class="now">我的订单</a></li>
-                    <li><a href="member/Member_Address.html">收货地址</a></li>
-                    <li><a href="#">缺货登记</a></li>
-                    <li><a href="#">跟踪订单</a></li>
-                </ul>
-            </div>
-            <div class="left_m">
-                <div class="left_m_t t_bg2">会员中心</div>
-                <ul>
-                    <li><a href="Member_User.html">用户信息</a></li>
+                    <li><a href="order.html">我的订单</a></li>
+                    <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                    <li><a href="Member_Address.html">地址管理</a></li>
                     <li><a href="Member_Collect.html">我的收藏</a></li>
-                    <li><a href="Member_Msg.html">我的留言</a></li>
-                    <li><a href="Member_Links.html">推广链接</a></li>
-                    <li><a href="#">我的评论</a></li>
                 </ul>
             </div>
             <div class="left_m">
-                <div class="left_m_t t_bg3">账户中心</div>
+                <div class="left_m_t t_bg2">用户中心</div>
                 <ul>
-                    <li><a href="Member_Safe.html">账户安全</a></li>
-                    <li><a href="Member_Packet.html">我的红包</a></li>
-                    <li><a href="Member_Money.html">资金管理</a></li>
+                    <li><a href="User_detail.html">用户信息</a></li>
+                    <li><a href="Member_Member.html">用户列表</a></li>
                 </ul>
             </div>
             <div class="left_m">
-                <div class="left_m_t t_bg4">分销中心</div>
+                <div class="left_m_t t_bg3">商品管理</div>
                 <ul>
-                    <li><a href="Member_Member.html">我的会员</a></li>
-                    <li><a href="Member_Results.html">我的业绩</a></li>
-                    <li><a href="Member_Commission.html">我的佣金</a></li>
-                    <li><a href="Member_Cash.html">申请提现</a></li>
+                    <li><a href="Category.html">分类管理</a></li>
+                    <li><a href="Member_Product.html" class="now">商品管理</a></li>
+                </ul>
+            </div>
+            <div class="left_m">
+                <div class="left_m_t t_bg4" >咨询管理</div>
+                <ul>
+                    <li><a href="news.html">咨询列表</a></li>
                 </ul>
             </div>
         </div>
