--- a/src/main/resources/static/User_detail.html
+++ b/src/main/resources/static/User_detail.html
@@ -192,31 +192,30 @@
                 <div class="left_m_t t_bg1">订单中心</div>
 
                 <ul>
-                    <li><a href="order/user_order.html" class="now">我的订单</a></li>
-                    <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="">全部订单</a></li>
+                    <li><a href="order.html">我的订单</a></li>
+                    <li v-if="$data.user.roleId===1||$data.user.roleId===2"><a href="order.html">全部订单</a></li>
+                    <li><a href="Member_Address.html">地址管理</a></li>
+                    <li><a href="Member_Collect.html">我的收藏</a></li>
                 </ul>
             </div>
             <div class="left_m">
-                <div class="left_m_t t_bg2">会员中心</div>
+                <div class="left_m_t t_bg2">用户中心</div>
                 <ul>
-                    <li><a href="">用户信息</a></li>
-                    <li><a href="">用户列表</a></li>
-                    <li><a href="">我的收藏</a></li>
+                    <li><a href="User_detail.html" class="now">用户信息</a></li>
+                    <li><a href="Member_Member.html">用户列表</a></li>
                 </ul>
             </div>
             <div class="left_m">
                 <div class="left_m_t t_bg3">商品管理</div>
                 <ul>
-                    <li><a href="">分类管理</a></li>
+                    <li><a href="Category.html">分类管理</a></li>
                     <li><a href="Member_Product.html">商品管理</a></li>
-                    <li><a href="product_add.html">分类管理</a></li>
                 </ul>
             </div>
             <div class="left_m">
-                <div class="left_m_t t_bg4">咨询管理</div>
+                <div class="left_m_t t_bg4" >咨询管理</div>
                 <ul>
-                    <li><a href="News/news.html">咨询列表</a></li>
-
+                    <li><a href="news.html">咨询列表</a></li>
                 </ul>
             </div>
         </div>
